[gd_scene load_steps=2 format=3 uid="uid://baocckthru2ib"]

[ext_resource type="Script" uid="uid://c61de4rjkx6or" path="res://Menus/Principal/main_menu.gd" id="1_7e6wt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7e6wt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button_Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Jogar"

[node name="Button_Continue" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Continue"

[node name="Button_Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Options"

[node name="Button_Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Exit" to="." method="_on_button_exit_pressed"]
